--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,98 +1,7 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
@@ -100,8 +9,147 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+
+.btn {
+  min-width: 12rem;
+  background-color: indigo;
+  color: #fff;
   }
-}
+  .btn.ant-btn:hover {
+  background-color: indigo;
+  color: #fff;
+  opacity: 0.9;
+  }
+  .btn.ant-btn:disabled {
+  background-color: indigo;
+  color: #fff;
+  opacity: 0.3;
+  }
+  
+  .btn-dashed.ant-btn:hover {
+  border: 1px dashed indigo;
+   color: indigo;
+  }
+  .connection-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+  }
+  .connect-btn {
+    width: 20vw;
+    display: block;
+  }
+  .game-title.ant-typography {
+    display: block;
+    text-align: center;
+    padding: 3rem;
+    background-color:indigo;
+    color: #fff;
+  }
+  .moves-title.ant-typography{
+    text-align: center;
+    color: indigo;
+  }
+  .moves-container {
+    width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 2rem;
+      padding: 2rem;
+    }
+    .game-details {
+      width: 40vw;
+      margin:0 auto;
+      padding: 2rem;
+    }
+    .title.ant-typography {
+      color: indigo;
+    }
+  .stake-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      gap: 2rem;
+      margin-block:2rem;
+  }
+  
+  .start-btn {
+    width: 50%;
+    display: block;
+    margin: 2rem auto;
+  }
+  /* Layout */
+  .layout-container{
+    text-align: center;
+  }
+  .connection-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+  }
+  .connect-btn {
+    width: 20vw;
+    display: block;
+  }
+  /* Sign Button */
+  .sign-btn-container:not(.disabled) .ant-image:hover {
+    cursor: pointer;
+    transform: scale(1.2);opacity: 1;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .sign-btn-container .ant-image {
+    opacity: 0.3;
+  }
+  
+  .sign-btn-container.selected .ant-image {
+    transform: scale(1.2);opacity: 1;
+  }
+  /* Modal */
+  .rps-modal  .ant-modal-content{
+    padding: 0;
+  }
+  
+  .rps-modal .ant-modal-header{
+    background-color: indigo;
+    padding: 1rem;
+    text-align: center;
+  }
+  .rps-modal .ant-modal-title{
+    color: #fff;
+  }
+  .rps-modal .ant-modal-body,.rps-modal  .ant-modal-footer {
+    padding: 1.5rem;
+  }
+  
+  
+  .rps-modal .ant-btn-default:hover {
+    border: 1px solid indigo;
+    color: indigo;
+  }
+  .rps-modal .ant-btn-primary {
+    background-color: indigo;
+    color: #fff;
+  }
+  .rps-modal .ant-btn-primary:hover {
+    background-color: indigo;
+    color: #fff;
+    opacity: 0.9;
+  }
+  .OpponentGame-container .btn{
+    display: block;
+    margin: 3rem auto;
+  }
+  .PlayerGame-container {
+    text-align: center;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;align-items: center;
+    gap: 1rem;
+  }
